--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,11 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.27.21</version>
+        </dependency>
+
     </dependencies>
 </project>
