--- a/pom.xml
+++ b/pom.xml
@@ -103,5 +103,15 @@
             <version>2.27.21</version>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.11</version>
+        </dependency>
+
+
+
+
+
     </dependencies>
 </project>
