--- a/pom.xml
+++ b/pom.xml
@@ -109,9 +109,11 @@
             <version>1.2.11</version>
         </dependency>
 
-
-
-
+        <dependency>
+            <groupId>com.slack.api</groupId>
+            <artifactId>slack-api-client</artifactId>
+            <version>1.44.1</version>
+        </dependency>
 
     </dependencies>
 </project>
